# paml

./: README.md
.github/workflows/: test.yml
rust/: .gitignore  Cargo.toml  rustfmt.toml
rust/src/: de.rs  error.rs  lib.rs  parse.rs  parse_lossless.rs  print.rs  ser.rs  tokenize.rs  tree.rs
rust/src/serde/: de.rs  error.rs  mod.rs  ser.rs
rust/tests/: parse_snapshot_tests.rs  serde_snapshot_tests.rs  snapshot_tests.rs
rust/tests/snapshots/: parse_snapshot_tests__simple_list.snap  parse_snapshot_tests__simple_value.snap  serde_snapshot_tests__big_serialize.snap  snapshot_tests__simple_list.snap  snapshot_tests__simple_value.snap
