[package]
name = "paml"
version = "0.1.0"
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.44", features = ["yaml"] }
rstest = "0.26"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
